@@ -13,6 +13,11 @@
    This is enabled by default only if JBrowse is running from the
    default index.html included in the JBrowse distribution.
 
+ * HTMLFeatures, Alignments, and Alignments2 tracks now accept a
+   `maxHeight` configuration variable specifying the maximum displayed
+   height of a track in pixels.  Features that would cause the track
+   to grow beyond its maximum height will not be drawn (issue #222).
+
  * HTMLFeatures tracks now accept `style->label` and
    `style->description` configuration variables variable that can be
    set to a function callback that returns a string with the feature's
